deploy_dv/deploy_prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-test01
  namespace: qa
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
