deploy_dv/deploy_qa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-k8s-hands-on
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: darovero/k8s-hands-on:latest
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: backend-k8s-hands-on
#   labels:
#     app: backend
# spec:
#   selector:
#     app: backend
#   ports:
#   - protocol: TCP
#     port: 80
#     targetPort: 9090
