deploy_dv/deploy-back_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-dev  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: back-dev
  template:
    metadata:
      labels:
        app: back-dev
    spec:
      containers:
      - name: back-dev
        image: darovero/solid-nginx:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: back-dev  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: back-dev
