deploy_dv/deploy-front_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-dev  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-dev
  template:
    metadata:
      labels:
        app: front-dev
    spec:
      containers:
      - name: front-dev
        image: darovero/solid-nginx:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front-dev  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: front-dev
