deploy_dv/hello-world-ingress_test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/server-snippet: |
      location = / {
       rewrite ^ https://uat-portal.genyus.ey.com/portal/login permanent;
       break;
      }
  spec:
    ingressClassName: nginx
    rules:
    - http:
        paths:
        - backend:
            service:
              name: nginx-prod
              port:
                number: 80
          path: /([^/]*)(.*)
          pathType: Prefix
        - backend:
            service:
              name: aks-helloworld-one
              port:
                number: 80
          path: /hello-world-one(/|$)(.*)
          pathType: Prefix
        - backend:
            service:
              name: aks-helloworld-two
              port:
                number: 80
          path: /hello-world-two(/|$)(.*)
          pathType: Prefix
